--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
 <body>
     <div class="container">
         <header class="main-info">
-            <h1>[Your First and Last Name]</h1>
-            <h1>Preferred Name: [Your Preferred Name]</h1>
+            <h1>Hana Hasan</h1>
+            <h1>Preferred Name: Hana</h1>
         </header>
 
         <section class="lewis">
-			<h2>Year at Lewis: [Your Years at Lewis]</h2>
-			<h2>Lewis major/minor/concentrations: [Your major/minor/concentrations]</h2>
-			<h2>Reasons for pursuing this degree: [Your reasons for pursuing the degree]</h2>
+			<h2>Year at Lewis: Senior</h2>
+			<h2>Lewis major/minor/concentrations: Computer Science</h2>
+			<h2>Reasons for pursuing this degree: I enjoy coding! I like the creative and problem solving aspects of coding. (Job security is also nice.)</h2>
         </section>
 
 		<section class="course">
             <h2>Reasons for Taking This Course</h2>
-            <p>[Your reasons for taking this course]</p>
+            <p>I am excited to work as a team, because in the real world, people work in teams.</p>
         </section>
 
 		<section class="job">
