testing out commit on command line

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <section class="hobbies">
             <h2>Hobbies and Special Interests</h2>
-            <p>[Your hobbies or special interests]</p>
+            <p>I enjoy reading, watching movies, and trying new foods with my friends! I'm trying to get into baking.</p>
         </section>
 
         <section class="fun-fact">
