added "Last updated" and HOPEFULLY the photo too

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
             <h2>Fun Fact: This is the third college I have attended.</h2>
         </section>
 
+        <footer>
+            <p>Last Updated on 1/28/2025</p>
+        </footer>
     </div>
 </body>
 </html>
