added email + discord

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         .main-info {
             margin-top: 20px; 
             color: black;
-            padding: 20px;
             text-align: center;
-            font-family:  Georgia, 'Times New Roman', Times, serif;
+            color: #1b4709;
             
         }
         .main-info h1 {
             font-size: 40px;
-            color: #1b4709;
+            font-family:  Georgia, 'Times New Roman', Times, serif;
+            
         }
+
         .photo {
             display: block;
             margin-left: auto;
@@ -49,6 +50,7 @@
     <div class="container">
         <section class="main-info">
             <h1>Hana Hasan</h1>
+            <h3>Email: hanaahasan@lewis.edu | Discord: hanabanana1609</h3>
         </section>
 
         <!-- Move the photo class here -->
